fix scrollbar issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -287,3 +287,7 @@ body {
     letter-spacing: var(--tracking-normal);
   }
 }
+
+html {
+  overflow: hidden;
+}
